r53 - may, 15, 2009
    * Recette : indexSucces.php > images got 'alt' attributes
    * Depense : indexSucces.php > images got 'alt' attributes
    * CotisationType : indexSucces.php > images got 'alt' attributes
    * Cotisation : indexSucces.php > images got 'alt' attributes
    * Compte : indexSucces.php > images got 'alt' attributes
    * Activite : indexSucces.php > images got 'alt' attributes
    * Membre : indexSucces.php > images got 'alt' attributes
    * Statut : indexSucces.php > images got 'alt' attributes
    * layout.php : stupid mistake has been corrected in Javascript markup
    * RecetteForm.class.php : Integer validator changed to Number validator for
      amount field
    * DepenseForm.class.php : Integer validator changed to Number validator for
      amount field
    * CotisationForm.class.php : Integer validator changed to Number validator 
      for amount field
     

r52 - may, 15, 2009
    * Missing files when commiting revision 51


r51 - may, 15, 2009
    * CotisationForm.class.php : add empty choice to force user to select a
      value (which will be updated thanks to  AJAX updater)
    * CotisationType : actions > executeAjaxgetamountfor() gets the amount and
      not the ID
    * => Issue #5 has been really done !


r50 - may, 15, 2009
    * /config/schema.yml : Cotisation got a new field 'montant'
    * symfony propel:build-model
    * /doc/piwam-install.sql : updated
    * symfony propel:build-forms
    * Membre : actions > processForm() > fixed error due to wrong variable
      ($user instad of $membre)
    * Membre : actions > executeEndregistration() > we do not try to retrieve
      user's data anymore (these data weren't used)
    * view.yml : prototype.js enabled to avoid JS warning
    * layout.php : jQuery's noConflict mode enabled
    * Cotisation : _form > AJAX behaviour to update the amount according to
      the type of Cotisation
    * => Issue #5 has been done


r49 - may, 14, 2009