@@ -1,3 +1,14 @@
+r54 - may, 17, 2009
+    * /lib/validator/sfValidatorAmount.class.php : new file. This validates
+      amount with French decimal separator (comma)
+    * DepenseForm.class.php : now uses our new amount validator
+    * RecetteForm.class.php : now uses our new amount validator
+    * CotisationForm.class.php : now uses our new amount validator
+    * Cotisation : actions > we show the form to add - again - a new Cotisation
+      and we display a notice message after user clicking on submit button
+    * Cotisation : _form > new 'Liste' button to go back to the list
+
+
 r53 - may, 15, 2009
     * Recette : indexSucces.php > images got 'alt' attributes
     * Depense : indexSucces.php > images got 'alt' attributes
